[tool.poetry]
name = "pytest-pyppeteer"
version = "1.0.0"
description = "A plugin to run pyppeteer in pytest"
authors = ["Luiz Yao <luizyao@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyppeteer = "^1.0.2"
pytest = "^6.2.5"
cssselect = "^1.1.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
