[tool.poetry]
name = "pytest-pyppeteer"
version = "0.3.1"
description = "A plugin to run pyppeteer in pytest"
authors = ["Luiz Yao <luizyao@163.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/luizyao/pytest-pyppeteer/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/luizyao/pytest-pyppeteer/issues"
Documentation = "https://github.com/luizyao/pytest-pyppeteer/blob/dev/README.md"
Repository = "https://github.com/luizyao/pytest-pyppeteer/"

[tool.poetry.plugins]

[tool.poetry.plugins.pytest11]
pyppeteer = "pytest_pyppeteer.plugin"

[tool.poetry.dependencies]
python = "^3.7"
pyppeteer = "^1.0.2"
pytest = "^6.2.5"
cssselect = "^1.1.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
